[Property view] Fixed some layout problems of property view
Using "overflow:auto" to let outline view scroll when overflow.
Using "padding-bottom" to avoid property covered by panel splitter
Make propertyView flex0 so that it won't be forced to be lower than
the panel bottom

--- a/src/css/builder.css
+++ b/src/css/builder.css
@@ -547,6 +547,7 @@ body.ui-tabs.ui-widget {
 */
 .outlineView {
     border: 1px solid rgba(0,0,0,0.6);
+    overflow:auto
 }
 .outlineView .outline_content {
     background:#fff;
@@ -621,6 +622,7 @@ body.ui-tabs.ui-widget {
 */
 .propertyView {
     border: 1px solid rgba(0,0,0,0.6);
+    padding-bottom: 20px;
 }
 
 /*
